Transferee house and help added.

--- a/Odin/Content/css/transferee/housing.scss
+++ b/Odin/Content/css/transferee/housing.scss
@@ -130,6 +130,10 @@
             width: 5rem;
             margin: 0 auto;
         }
+
+        .btn-container{
+            text-align:center;
+        }
     }
 
     .comments {
