--- a/Odin/Content/css/transferee/housing.css
+++ b/Odin/Content/css/transferee/housing.css
@@ -83,6 +83,8 @@
     display: block;
     width: 5rem;
     margin: 0 auto; }
+  .propertyItem > div .btn-container {
+    text-align: center; }
   .propertyItem .comments img {
     width: 3rem; }
   .propertyItem .comments {
