--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Odin.ViewModels.Orders.Transferee.HousingPropertyViewModel>
+﻿@using Odin.Data.Core.Models
+@model IEnumerable<Odin.ViewModels.Orders.Transferee.HousingPropertyViewModel>
 
 <div id="propertiesBlock">
     <div class="row" id="propertiesHeader">
@@ -89,7 +90,14 @@
 
                 <div class="col-md-3">
                     <label class="mobileLabel">Schedule a Viewing</label>
-                    @Html.DatePicker("date", "ViewingDate", propertyVM.ViewingDate, true)
+                    @if (User.IsInRole(UserRoles.Transferee))
+                    {
+                        <p>@Html.DisplayFor(m => propertyVM.ViewingDate)</p>
+                    }
+                    else
+                    {
+                        @Html.DatePicker("date", "ViewingDate", propertyVM.ViewingDate, true)
+                    }
                 </div>
 
                 <div class="col-md-1 col-xs-12">
