--- a/Odin/Views/Orders/Transferee.cshtml
+++ b/Odin/Views/Orders/Transferee.cshtml
@@ -1,83 +1,19 @@
-﻿@model Odin.ViewModels.Orders.Transferee.OrdersTransfereeViewModel
+﻿@using Odin.Data.Core.Models
+@model Odin.ViewModels.Orders.Transferee.OrdersTransfereeViewModel
 @{
     ViewBag.Title = "Transferee Page";
     Layout = "~/Views/Shared/_Common.cshtml";
 }
 
 <nav class="navbar navbar-default" id="transfereeSideNav">
-
-    <div class="container-fluid navWrapper">
-        <div class="navbar-header transfereeSideNav__person">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <div class="navbar-brand" href="#">
-                @*<img class="person" src="~/Content/Images/icn_person.png" />*@
-                <p class="eeName">@Model.Transferee.FullName</p>
-                @Html.HiddenFor(Model => Model.Transferee.Email, new { id = "TransfereeEmail" })
-            </div>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <div class="eeDetails">
-                <div class="eeOriginVipWrap">
-                    <p class="eeDetails eeOrigin">@Model.RelocationType</p>
-                    @if (Model.IsVipDisplay == "Yes")
-                    {
-                        <p class="eeDetails eeBar">|</p>
-                        <p class="eeDetails eeVip">VIP</p>
-
-                    }
-                </div>
-                <p class="eeDetails">@Model.Rmc</p>
-                <p class="eeDetails">@Model.Client</p>
-            </div>
-            <ul class="nav navbar-nav">
-                <hr class="transfereeSideNav__rule" />
-
-                <li class="item selected nav-item" data-panel="intake">
-                    <a href="#intake">
-                        <img src="~/Content/Images/icn_intake.png" />
-                        <label>Intake</label>
-                    </a>
-                </li>
-                <li class="item nav-item" data-panel="details">
-                    <a href="#details">
-                        <img src="~/Content/Images/icn_details.png" />
-                        <label>Details</label>
-                    </a>
-                </li>
-                <li class="item nav-item" data-panel="housing">
-                    <a href="#housing">
-                        <img src="~/Content/Images/icn_housing.png" />
-                        <label>Housing</label>
-                    </a>
-                </li>
-                <li class="item nav-item" data-panel="history">
-                    <a href="#history">
-                        <img src="~/Content/Images/icn_history.png" />
-                        <label>History</label>
-                    </a>
-                </li>
-                <hr class="transfereeSideNav__rule" />
-                <li class="item nav-item" data-panel="messages">
-                    <a href="#messages">
-                        <img src="~/Content/Images/icn_internal_messages.png" />
-                        <label>Messages</label>
-                    </a>
-                </li>
-                <li class="item nav-item" data-panel="itinerary">
-                    <a href="#itinerary">
-                        <img src="~/Content/Images/icn_internal_itinerary.png" />
-                        <label>Itinerary</label>
-                    </a>
-                </li>
-            </ul>
-            <span id="backButton">BACK TO LIST</span>
-        </div>
-    </div>
+    @if (User.IsInRole(UserRoles.Transferee))
+    {
+        @Html.Partial("~/Views/Orders/Partials/_TransfereeSideNav.cshtml", Model)
+    }
+    else
+    {
+        @Html.Partial("~/Views/Orders/Partials/_ConsultantSideNav.cshtml", Model)
+    }
 </nav>
 
 <div class="container" id="orderContainer">
@@ -97,9 +33,9 @@
             $(document).ready(function () {
                 OrdersPageController.TransfereeInit();
 
-                $('#backButton').click(function () {
+                $('#backButton').click(function() {
                     window.location.href = "/orders";
-                })
+                });
             });
 
     </script>
