--- a/Odin/Views/Account/ForgotPassword.cshtml
+++ b/Odin/Views/Account/ForgotPassword.cshtml
@@ -29,7 +29,9 @@
                     </div>
                     <br />
                     <div id="desc">
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi.</p>
+                        <p>
+                            @*Spot for placeholder_text*@ 
+                        </p>
                     </div>
                 </div>
             </div>
