--- a/Odin/Views/Mailers/ResetPassword.cshtml
+++ b/Odin/Views/Mailers/ResetPassword.cshtml
@@ -18,7 +18,9 @@
                 <div style="margin-top: 72px;font-size: 36px;line-height: 50px;font-family: sans-serif;" id="caption">
                     <span>Reset your</span><span id="pw" style="color: #31A4DD;"> Password</span>
                     <div style="width: 344px;margin: auto;font-size:initial;line-height: 22px;margin-top: 14px;" class="mailer">
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi.</p>
+                        <p>
+                            @*Spot for placeholder_text*@ 
+                        </p>
                     </div>
                 </div>
 
