--- a/Odin/Views/Mailers/CreatePassword.cshtml
+++ b/Odin/Views/Mailers/CreatePassword.cshtml
@@ -19,7 +19,9 @@
                 <div style="margin-top: 72px;font-size: 36px;line-height: 50px;font-family: sans-serif;" id="caption">
                     <span>Create your</span><span id="pw" style="color: #31A4DD;"> Password</span>
                     <div style="width: 344px;margin: auto;font-size:initial;line-height: 22px;margin-top: 14px;" class="mailer">
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi.</p>
+                        <p>
+                            @*Spot for placeholder_text*@
+                        </p>
                     </div>
                 </div>
                 <div id="group-blk" style="margin-top: 60px;padding-top: 0px;" class="mailer">
