--- a/Odin/Views/Orders/Index.cshtml
+++ b/Odin/Views/Orders/Index.cshtml
@@ -115,6 +115,8 @@
         @Scripts.Render("~/Scripts/orders")
 
         <script>
-            $(document).ready(OrdersPageController.OrdersPageInit);
+            $(document).ready(
+                OrdersPageController.OrdersPageInit
+            );
         </script>
     }
