--- a/Odin/Content/css/forgotpassword.css
+++ b/Odin/Content/css/forgotpassword.css
@@ -1,4 +1,7 @@
-﻿body {
+﻿html, body {
+  background-color: #f1f1f1; }
+
+body {
   padding-top: 0px;
   background-image: url("/Content/Images/bg_gradient_forgot_password.png"); }
   @media (max-width: 768px) {
