--- a/Odin/Content/css/transferee/details.css
+++ b/Odin/Content/css/transferee/details.css
@@ -1,4 +1,7 @@
-﻿.scheduledServiceTitle {
+﻿html, body {
+  background-color: #f1f1f1; }
+
+.scheduledServiceTitle {
   display: block;
   font-size: 1.5rem;
   font-weight: 500;
