--- a/Odin/Content/css/transferee/itineraryPdf.css
+++ b/Odin/Content/css/transferee/itineraryPdf.css
@@ -1,6 +1,12 @@
 ﻿html, body {
   background-color: #f1f1f1; }
 
+html {
+  background-color: white !important; }
+
+body {
+  background-color: white !important; }
+
 div#itinerary .sectionList {
   list-style: none;
   margin: 0;
@@ -70,33 +76,31 @@ div#itinerary .eventNote {
   font-size: 1.8rem;
   color: #4E4E4E;
   font-weight: 300;
-  margin: 0px;
   padding: 0;
-  line-height: 1rem; }
+  line-height: 26px; }
 
 div#itinerary .eventTime {
   font-size: 1.8rem;
   color: #A7CE39;
   font-weight: 500;
-  margin: 0px;
   padding: 0;
   color: #49ae44;
-  line-height: 1rem; }
+  line-height: 26px; }
 
 @media screen and (min-width: 48rem) {
   div#itinerary .sectionList li.itineraryDay {
     width: 50%; } }
 
-.sectionList li.noteEntry {
-  line-height: 1rem;
-  margin-bottom: 0rem; }
+div#itinerary .sectionList li.noteEntry {
+  line-height: 26px;
+  margin-bottom: 1rem; }
 
-.noteRow {
+div#itinerary .noteRow {
   cursor: pointer; }
 
-.modal-content {
+div#itinerary .modal-content {
   padding: 2rem; }
-  .modal-content .close {
+  div#itinerary .modal-content .close {
     position: absolute;
     top: 3rem;
     right: 3rem; }
