--- a/Odin/Content/css/transferee/sideNav.css
+++ b/Odin/Content/css/transferee/sideNav.css
@@ -1,4 +1,7 @@
-﻿#transfereeSideNav {
+﻿html, body {
+  background-color: #f1f1f1; }
+
+#transfereeSideNav {
   position: fixed;
   top: 5rem;
   background-color: #a7ce39;
