--- a/Odin/Content/css/transferee/transferee.scss
+++ b/Odin/Content/css/transferee/transferee.scss
@@ -1,14 +1,21 @@
 ﻿@import "../shared/_definitions.scss";
 
 #orderContainer {
-    margin-left: 0 !important;
+    margin-left: 0;
     margin-top: calc(#{$primaryNavHeightSm} + 6rem);
     width: 100%;
-    
+    background-color: #fff;
+    min-height: calc(100vh - #{$primaryNavHeightSm});
+
     @media screen and (min-width: 48rem) {
-        margin-left: $sideNavWidth !important;
+        margin-left: $sideNavWidth;
         margin-top: $primaryNavHeightLg;
         width: auto;
+        min-height: calc(100vh - #{$primaryNavHeightLg});
+    }
+
+    @media screen and (min-width: 1440px) {
+        max-width: calc(1440px - #{$sideNavWidth});
     }
 }
 
