--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -1,6 +1,6 @@
 @model Odin.ViewModels.Orders.Transferee.HousingViewModel
 
-<div class="container-fluid" id="housing">
+<div class="container-fluid" id="housing" data-order-id="@Model.Id">
     <div class="row" id="housingSummaryMap">
         <div class="col-md-4">
             <h1 class="sectionTitle">Housing Summary</h1>
