Started on the transferee dashboard.

--- a/Odin/Views/Orders/Partials/_Dashboard.cshtml
+++ b/Odin/Views/Orders/Partials/_Dashboard.cshtml
@@ -3,5 +3,52 @@
     ViewBag.Title = "_Dashboard";
 }
 
-<h2>_Dashboard</h2>
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <h3>Dashboard</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+            <h4>Tasks</h4>
+            <section>
+                <h5>License Registration</h5>
+                <p>Lorem ipsum dolore maga equis todi magnis dis parturient montes, nascetur diciulus mus.</p>
+                <ul>
+                    <li>
+                        <img src="http://placehold.it/64x64">
+                        <p>Sed fringilla mauris sit amet nib</p>
+                    </li>
+                    <li>
+                        <img src="http://placehold.it/64x64">
+                        <p>Sed fringilla mauris sit amet nib</p>
+                    </li>
+                    <li>
+                        <img src="http://placehold.it/64x64">
+                        <p>Sed fringilla mauris sit amet nib</p>
+                    </li>
+                    <li>
+                        <img src="http://placehold.it/64x64">
+                        <p>Sed fringilla mauris sit amet nib</p>
+                    </li>
+                    <li>
+                        <img src="http://placehold.it/64x64">
+                        <p>Sed fringilla mauris sit amet nib</p>
+                    </li>
+                    <li>
+                        <img src="http://placehold.it/64x64">
+                        <p>Sed fringilla mauris sit amet nib</p>
+                    </li>
+                    <li>
+                        <img src="http://placehold.it/64x64">
+                        <p>Sed fringilla mauris sit amet nib</p>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div class="col-md-4">
+            <h4>Itinerary</h4>
+        </div>
+    </div>
+</div>
