--- a/Odin/Content/css/transferee/housing.css
+++ b/Odin/Content/css/transferee/housing.css
@@ -12,6 +12,12 @@
   border-bottom: 1px solid #b7a998;
   padding: 1.5rem 0;
   margin-top: 2rem; }
+  @media screen and (max-width: 61.875rem) {
+    .controlsContainer > * {
+      display: flex;
+      justify-content: center; }
+    .controlsContainer #housingFilter {
+      margin-bottom: 3rem; } }
 
 #housingFilter {
   margin: 0;
@@ -23,24 +29,29 @@
     #housingFilter label:last-child {
       margin-right: 0; }
     #housingFilter label input[type=radio] {
-      box-sizing: border-box; }
+      box-sizing: border-box;
+      width: auto; }
       #housingFilter label input[type=radio] + span {
         font-weight: 300;
         color: #b7a998; }
       #housingFilter label input[type=radio]:checked + span {
         font-weight: 500;
-        color: #8e1a55; }
+        color: #621f65; }
   #housingFilter .housingFilter__title {
     font-size: 1.5rem; }
 
 .btnAndLabel {
   display: inline-block;
-  cursor: pointer; }
+  cursor: pointer;
+  float: right; }
   .btnAndLabel > img {
     width: 3rem; }
   .btnAndLabel > * {
     display: inline-block;
     vertical-align: middle; }
+  @media screen and (max-width: 48rem) {
+    .btnAndLabel {
+      float: none; } }
 
 .btnAndLabel + .btnAndLabel {
   margin-right: 1.5rem; }
@@ -59,35 +70,55 @@
     margin: 0;
     padding: 0; }
     #propertiesHeader div p {
-      color: #31a4dd;
+      color: #858585;
       line-height: 1.25rem;
       white-space: pre-line;
       text-align: center; }
+  @media screen and (max-width: 62rem) {
+    #propertiesHeader {
+      display: none; } }
 
-.propertyItem {
+li.propertyItem {
   margin: 0 0 0 0;
   padding: 0.5rem 0 0.5rem 0; }
-  .propertyItem:hover {
+  @media screen and (max-width: 61.875rem) {
+    li.propertyItem {
+      margin-top: 2rem;
+      border-bottom: 1px solid #b7a998; } }
+  li.propertyItem:hover {
     background-color: #f5f5f5;
     cursor: pointer; }
-  .propertyItem > div p {
-    color: #858585;
-    text-align: center;
-    line-height: 1.5rem; }
-  .propertyItem > div .input-group.date, .propertyItem > div .input-group.time {
-    margin: 0 auto;
-    width: auto; }
-    .propertyItem > div .input-group.date > input.form-control, .propertyItem > div .input-group.time > input.form-control {
-      text-align: center; }
-  .propertyItem > div img {
-    display: block;
-    width: 5rem;
-    margin: 0 auto; }
-  .propertyItem .comments img {
+  li.propertyItem > div {
+    color: #31a4dd; }
+    li.propertyItem > div p {
+      text-align: center;
+      line-height: 1.5rem; }
+    li.propertyItem > div .input-group.date, li.propertyItem > div .input-group.time {
+      margin: 0 auto;
+      width: auto; }
+      li.propertyItem > div .input-group.date > input.form-control, li.propertyItem > div .input-group.time > input.form-control {
+        text-align: center; }
+    li.propertyItem > div img {
+      display: block;
+      width: 5rem;
+      margin: 0 auto; }
+    @media screen and (max-width: 61.875rem) {
+      li.propertyItem > div {
+        margin-bottom: 2rem; }
+        li.propertyItem > div p {
+          text-align: left; }
+        li.propertyItem > div .input-group.date, li.propertyItem > div .input-group.time {
+          margin-left: 0;
+          width: auto; }
+          li.propertyItem > div .input-group.date > input.form-control, li.propertyItem > div .input-group.time > input.form-control {
+            text-align: left; }
+        li.propertyItem > div img {
+          margin-left: 0; } }
+  li.propertyItem .comments img {
     width: 3rem; }
-  .propertyItem .comments {
+  li.propertyItem .comments {
     position: relative; }
-    .propertyItem .comments span {
+    li.propertyItem .comments span {
       position: absolute;
       top: 0;
       left: 50%;
@@ -116,11 +147,17 @@
 .likeDislike {
   margin: 0 auto;
   width: auto;
-  height: auto; }
+  height: auto;
+  min-width: 60px; }
+  @media screen and (max-width: 61.875rem) {
+    .likeDislike {
+      max-width: 10rem;
+      margin-left: 0; } }
   .likeDislike .likeDislike-btn, .likeDislike .like, .likeDislike .dislike {
-    height: 50px;
-    /*padding-left: 180px; /* Equal to width of new image */
+    width: 50%;
+    height: 5rem;
     background-position: center center !important;
+    background-size: contain;
     cursor: pointer; }
   .likeDislike .like {
     background: url("/Content/Images/icn_ln_non_selected_like.png") no-repeat; }
