--- a/Odin/Content/css/bookmarklet.scss
+++ b/Odin/Content/css/bookmarklet.scss
@@ -1,5 +1,9 @@
 ﻿@import "shared/_definitions.scss";
 
+html, body {
+    background-color: #fff;
+}
+
 .bm-message{
     padding-bottom:25px;
     line-height:25px;
