--- a/Odin/Content/css/transferee/housing.scss
+++ b/Odin/Content/css/transferee/housing.scss
@@ -185,18 +185,19 @@ li.propertyItem {
     }
 
     .comments {
-        img {
-            width: 3rem;
-        }
-    }
-
-    .comments {
         position: relative;
 
+        img {
+            width: 3rem;
+            display: inline-block;
+        }
+
         span {
+            display: inline-block;
             position: absolute;
-            top: 0;
-            left: 50%;
+            top: -1rem;
+            left: 2rem;
+            text-align:center;
             background-color: $DW_Red;
             color: white;
             font-size: 1.25rem;
