--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -110,9 +110,11 @@
                     @Html.EditorFor(m => propertyVM.Liked, new { propertyId = propertyVM.Id })
 
                 </div>
-                <div class="col-md-1 col-xs-12 comments">
-                    <img class="comments" src="~/Content/Images/icn_chat_bubble.png" />
-                    <span>@propertyVM.Messages.Where(r => r.IsRead == false && r.AuthorId != ViewBag.CurrentUser).Count()</span>
+                <div class="col-md-1 col-xs-12">
+                    <div class="comments">
+                        <img class="comments" src="~/Content/Images/icn_chat_bubble.png" />
+                        <span>@propertyVM.Messages.Where(r => r.IsRead == false && r.AuthorId != ViewBag.CurrentUser).Count()</span>
+                    </div>
                 </div>
             </li>
         }
