--- a/Odin/Views/Orders/Partials/_Details.cshtml
+++ b/Odin/Views/Orders/Partials/_Details.cshtml
@@ -15,7 +15,7 @@
             <p>@Model.ProgramManager.Email</p>
         </li>
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>Manager #:</label>
+            <label>Manager Phone #:</label>
             <p> @Model.PhoneNumberDisplay</p>
         </li>
 
@@ -51,7 +51,7 @@
 
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Final Arrival:</label>
-            <p>@Model.FinalArrivalDateDisplay</p>
+            <p>@Model.FinalArrivalDateDisplay &nbsp;</p>
         </li>
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Home Finding Date:</label>
