--- a/Odin/Views/Orders/Partials/_Message.cshtml
+++ b/Odin/Views/Orders/Partials/_Message.cshtml
@@ -43,7 +43,7 @@
             <textarea id="message" onfocus="this.value=''; setbg('#e5fff3');" onblur="setbg('white')">Enter your comment here...</textarea>
         </div>
         <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>            
+                <button type="button" class="btn btn-secondary" id="messageClose">Close</button>            
                 <button type="button" class="btn btn-primary send">Send</button>
         </div>    
     </div>
@@ -52,36 +52,5 @@
 <script>
     $(document).ready(function () {
         TransfereeMessagesController.init();
-    });
-    $('.btn-secondary').click(function () {
-        var propertyId = $('#messagesModal').attr('data-property-id');                
-        var Url = "/api/orders/transferee/housing/markRead/" + propertyId;
-
-        $.ajax({
-            url: Url,
-            type: 'POST',
-            success: function (result) {
-                toast("Messageses have been marked as read.", "success");
-                OrdersPageController.loadPanel("housing");
-            },
-            error: function () {
-                toast("No messageses have been marked as read.", "warning");
-            }
-        });
-        var toast = function (message, type) {
-            $.notify({
-                message: message
-            }, {
-                    type: type,
-                    placement: {
-                        from: "bottom",
-                        align: "center"
-                    },
-                    animate: {
-                        enter: 'animated fadeInDown',
-                        exit: 'animated fadeOutUp'
-                    }
-                });
-        };
-    });
+    });    
 </script>
