--- a/Odin/Content/css/transferee/help.css
+++ b/Odin/Content/css/transferee/help.css
@@ -4,7 +4,7 @@
 .helpRow {
   padding-top: 2rem; }
   .helpRow img {
-    padding-bottom: 2rem;
+    margin-bottom: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
 
 li.helpItem {
