--- a/Odin/Views/Orders/Partials/_Help.cshtml
+++ b/Odin/Views/Orders/Partials/_Help.cshtml
@@ -11,10 +11,10 @@
         </div>
     </div>
     <div class="row helpRow">
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <img src="/Content/Images/install.jpg"/>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <ul class="sectionList">
                 <li class="helpItem">
                     <div class="helpNum">
@@ -74,10 +74,10 @@
         </div>
     </div>
     <div class="row helpRow">
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <img src="/Content/Images/bookmarklet.jpg" />
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <ul class="sectionList">
                 <li class="helpItem">
                     <div class="helpNum">
