order page notification number

--- a/Odin/Views/Orders/Index.cshtml
+++ b/Odin/Views/Orders/Index.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/Shared/_Common.cshtml";
 }
 @Styles.Render("~/Styling/orders")
+
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
 <div class="container-fluid" id="list">
     
         <div id="search">
@@ -99,7 +103,7 @@
             </div>
             <div class="col-md-2">
                 <label class="header">Notifications</label>
-                <p>2*</p>
+                <p>@order.Notifications.Count()</p>
             </div>
         </li>
     }
