--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -565,6 +565,11 @@
                 @Html.HiddenFor(m => @Model.LengthOfAssignment, new { @class = "intake-hidden" })
             </div>
         </div>
+        <div class="row intake-row collapse in">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
+                <button id="btnInviteTransferee">Invite Transferee</button>
+            </div>
+        </div>
     </div>
 </div>
 @Styles.Render("~/Styling/intake")
