--- a/Odin/Content/css/transferee/details.css
+++ b/Odin/Content/css/transferee/details.css
@@ -1,6 +1,10 @@
 ﻿html, body {
   background-color: #f1f1f1; }
 
+div#details hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem; }
+
 .scheduledServiceTitle {
   display: block;
   font-size: 1.5rem;
