--- a/Odin/Content/css/transferee/details.scss
+++ b/Odin/Content/css/transferee/details.scss
@@ -1,5 +1,8 @@
 ﻿@import "../shared/_definitions.scss";
-
+div#details hr{
+    margin-top:1rem;
+    margin-bottom:1rem;
+}
 .scheduledServiceTitle {
     display: block;
     font-size: 1.5rem;
