--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Odin.ViewModels.Orders.Transferee.OrdersTransfereeViewModel
-
+@using Odin.Helpers;
 <div class="container-fluid" id="intake" data-order-id="@Model.Id">
     <div class="titleGroup">
         <h1 class="sectionTitle">Intake</h1>
@@ -24,7 +24,7 @@
             </li>
             <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 @Html.LabelFor(model => @Model.Transferee.PhoneNumber)
-                <p class="input-group time">@Model.Transferee.PhoneNumber</p>
+                <p>@Model.Transferee.PhoneNumber</p>
             </li>
         </ul>
     </div>
