--- a/Odin/Views/Orders/Partials/_Itinerary.cshtml
+++ b/Odin/Views/Orders/Partials/_Itinerary.cshtml
@@ -123,7 +123,7 @@
     </ul>
     <div class="modal fade appointmentModal" id="modalForm" tabindex="-100" role="dialog" data-backdrop="false" aria-labelledby="appointmentModal">
         <div class="modal-dialog" role="document" id="appointment" style="z-index: 2147483647;">
-            <div class="modal-content id="appointmentModalLabel"">
+            <div class="modal-content" id="appointmentModalLabel">
                 <div class="modal-header row">
                     <h5 class="modal-title"></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
