--- a/Odin/Views/Account/Login.cshtml
+++ b/Odin/Views/Account/Login.cshtml
@@ -25,7 +25,7 @@
                      <div class="col-md-10">
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" ,@id = "validation_email"})
                     </div>
                 </div>
 
@@ -33,7 +33,7 @@
                     <div class="col-md-10">
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger", @id = "validation_password" })
                     </div>
                 </div>
 
